--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,7 +4,7 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
+    <style name="AppBaseTheme" parent="android:Theme.Holo">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -16,5 +16,11 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    <color name="LoginColor">#373737</color>
+    <color name="LoginBandColor">#1F1F1F</color>
+    <color name="LoginTextColor">#FFFFFF</color>
+    <color name="LoginSignInColor">#0078B6</color>
+    <color name="LoginSignUpColor">#717171</color>
+    <color name="LoginWebSiteColor">#898989</color>
 
 </resources>
