--- a/res/drawable/login_bg_sign_up.xml
+++ b/res/drawable/login_bg_sign_up.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 <!--this is to give gradient effect -->
-<!-- <gradient   android:angle="270"
-            android:startColor="#e7ff47"
-            android:endColor="#90a501"
-            />-->
 <gradient   android:angle="270"
-            android:startColor="@color/LoginSignUpColor"
-            android:endColor="@color/LoginSignUpColor"
+            android:startColor="@color/LoginSignUpColorBgStart"
+            android:endColor="@color/LoginSignUpColorBgEnd"
             />
 <!-- this is make corners of button rounded -->
 <corners    android:topLeftRadius="5dip"
