--- a/res/drawable/login_hover_sign_up.xml
+++ b/res/drawable/login_hover_sign_up.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 <!--this is to give gradient effect -->
 <gradient   android:angle="270"
-               android:startColor="#6b6b6b"
-               android:endColor="#0e0e0e"
+               android:startColor="@color/LoginSignUpColorHoverStart"
+               android:endColor="@color/LoginSignUpColorHoverEnd"
                />
 <!-- this is make corners of button rounded -->
 <corners    android:topLeftRadius="5dip"
