--- a/res/layout/promotion_list_item.xml
+++ b/res/layout/promotion_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginBottom="20dp" >
 
@@ -13,7 +13,7 @@
         <TextView
             android:id="@+id/textView1"
             android:layout_width="213dp"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
             android:layout_weight="0.62"
             android:textColor="@color/TextColor"
             android:layout_marginTop="15dp"
