--- a/res/layout/student_list_item_click1.xml
+++ b/res/layout/student_list_item_click1.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_marginBottom="20dp"
     android:orientation="vertical" >
 
@@ -24,27 +24,28 @@
                 android:text="titi"
                 android:textColor="@color/TextColor" />
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="5dp"
-                android:text="toto"
-                android:textColor="@color/TextColorStudentTextView2" />
+			<LinearLayout
+			    android:layout_width="252dp"
+			    android:layout_height="wrap_content" >
+	            
+	            <TextView
+	                android:id="@+id/textView2"
+	                android:layout_width="136dp"
+	                android:layout_height="wrap_content"
+	                android:paddingLeft="5dp"
+	                android:text="toto"
+	                android:textColor="@color/TextColorStudentTextView2" />
+	            
+	            <TextView
+	                android:id="@+id/textView3"
+	                android:layout_width="match_parent"
+	                android:layout_height="wrap_content"
+	                android:paddingLeft="5dp"
+	                android:text="tata"
+	                android:textColor="@color/TextColorStudentTextView2" />
+	            	            
+        	</LinearLayout>
         </LinearLayout>
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="29dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="25dp"
-            android:src="@drawable/navigation_next_item" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView3"
-        style="@style/SeparatorItemPromotionStyle"
-        android:layout_width="match_parent"
-        android:layout_height="2dp" />
 
 </LinearLayout>
