--- a/res/layout/student_list_item_click2.xml
+++ b/res/layout/student_list_item_click2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_marginBottom="20dp"
     android:orientation="vertical" >
 
@@ -9,15 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <LinearLayout
-            android:layout_width="230dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.78"
-            android:orientation="vertical" >
-
             <TextView
                 android:id="@+id/textView1"
-                android:layout_width="match_parent"
+                android:layout_width="221dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:paddingLeft="5dp"
@@ -28,23 +22,11 @@
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:paddingLeft="5dp"
                 android:text="toto"
-                android:textColor="@color/TextColorStudentTextView2" />
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="29dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="25dp"
-            android:src="@drawable/navigation_next_item" />
+                android:textColor="@color/TextColor" />
+            
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView3"
-        style="@style/SeparatorItemPromotionStyle"
-        android:layout_width="match_parent"
-        android:layout_height="2dp" />
 
 </LinearLayout>
