--- a/res/layout/student_list_item_click2.xml
+++ b/res/layout/student_list_item_click2.xml
@@ -25,7 +25,8 @@
                 android:layout_marginTop="15dp"
                 android:paddingLeft="5dp"
                 android:text="toto"
-                android:textColor="@color/TextColor" />
+                android:textColor="@color/TextColor"
+                android:gravity="right" />
             
     </LinearLayout>
 
