--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -53,7 +53,7 @@
             android:textSize="15sp" />
 
        <EditText
-            android:id="@+id/editTextUsername"
+            android:id="@+id/editTextEmail"
             android:layout_width="250dp"
             android:layout_height="35dp"
             android:layout_gravity="center"
