--- a/res/layout/menu.xml
+++ b/res/layout/menu.xml
@@ -32,7 +32,8 @@
                     android:id="@+id/tabPromotions"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/MenuColor" >
+                    android:background="@color/MenuColor"
+                    android:orientation="vertical" >
 
                    <!--   <ExpandableListView
                         android:id="@+id/expandableListView"
@@ -44,7 +45,7 @@
                         android:dividerHeight="2dp" >
                     </ExpandableListView> -->
 
-                    <ListView
+                        <ListView
                         android:id="@+id/listView"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -52,6 +53,7 @@
                         android:background="@color/MenuColor" >
 
                     </ListView>
+
 
                 </LinearLayout>
 
