--- a/res/layout/student_list_item_click1.xml
+++ b/res/layout/student_list_item_click1.xml
@@ -25,12 +25,12 @@
                 android:textColor="@color/TextColor" />
 
 			<LinearLayout
-			    android:layout_width="252dp"
+			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content" >
 	            
 	            <TextView
 	                android:id="@+id/textView2"
-	                android:layout_width="136dp"
+	                android:layout_width="159dp"
 	                android:layout_height="wrap_content"
 	                android:paddingLeft="5dp"
 	                android:text="toto"
@@ -42,7 +42,8 @@
 	                android:layout_height="wrap_content"
 	                android:paddingLeft="5dp"
 	                android:text="tata"
-	                android:textColor="@color/TextColorStudentTextView2" />
+	                android:textColor="@color/TextColorStudentTextView2"
+	                android:gravity="right" />
 	            	            
         	</LinearLayout>
         </LinearLayout>
